--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Use a and d to adjust the triangle lengths and thus alter the pattern.
+		    Use a and d to adjust the triangle lengths and thus alter the pattern. Use b to change the method colors are displayed.
 	    </footer>
 	</body>
 </html>
